create entries in db from view

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
   h3 Quotes
   ul.quotes
     each quote in quotes
-      li(class="quote")
+      li.quote
         span= quote.name
         span= quote.quote
         
