--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,3 +1,11 @@
+
+.quote
+  //background-color: red
+  margin: 5px;
+
+.hidden
+  display: none
+
 body
   padding: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
