--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,10 +1,12 @@
 doctype html
-html
+html(lang="en")
   head
     title= title
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
     link(rel="stylesheet" href="/stylesheets/style.css")
+    link(href="https://fonts.googleapis.com/css?family=Bree+Serif|Cuprum|Kaushan+Script|Lobster|Orbitron|Quicksand|Russo+One|Source+Code+Pro|Ubuntu|Yanone+Kaffeesatz" rel="stylesheet")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
   body
     block content
     
