--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -6,7 +6,7 @@ $secondary-font: #FFF
 
 #header
   padding-bottom: 10px
-
+  
 //#create-quote
 textarea
   height: 100px
@@ -47,6 +47,7 @@ h1
   
 blockquote
   font-family: 'Cuprum', sans-serif
+  font-style: italic
   
 cite
   font-family: 'Lobster', cursive
