--- a/views/index.pug
+++ b/views/index.pug
@@ -9,38 +9,44 @@ block content
         h4 Add a new quote
     
     .row
-      .col-xs-12.col-sm-12.col-md-6.col-lg-4
+      .col-xs-12.col-sm-8.col-md-6.col-lg-4
         input(id="create-name" class="form-control form-control-md" type="text" placeholder="name" name="name")
     .row
-      .col-xs-12.col-sm-12.col-md-6.col-lg-4
+      .col-xs-12.col-sm-8.col-md-6.col-lg-4
         textarea(id="create-quote" placeholder="  quote" name="quote")
     .row
-      .col-xs-12.col-sm-12.col-md-6.col-lg-4
+      .col-xs-12.col-sm-8.col-md-6.col-lg-4
         button(id="save-quote" class="btn btn-success btn-sm" type="button") 
           i(class="fa fa-plus" aria-hidden="true")
         
     hr
      
     h3 Quotes
+    
     ul#quotes
       each quote in quotes
         li.quote(id=quote._id)
           .row
-            .col-xs-12.col-sm-12.col-md-6.col-lg-4
+            .col-xs-12.col-sm-8.col-md-6.col-lg-4
               i(class="fa fa-quote-left" aria-hidden="true")
               blockquote.quote-text= quote.quote
-          footer -
-            cite.name-text= quote.name
-          button(class="update-btn btn btn-primary btn-sm" type="button")
-            i(class="fa fa-pencil" aria-hidden="true")
-          button(class="delete-btn btn btn-danger btn-sm" type="button")
-            i(class="fa fa-minus" aria-hidden="true")
+          .row
+            .col-xs-12.col-sm-8.col-md-6.col-lg-4
+              footer -
+                cite.name-text= quote.name
+          .row
+            .col-3.col-md-2.col-lg-1
+              button(class="update-btn btn btn-primary btn-sm" type="button")
+                i(class="fa fa-pencil" aria-hidden="true")
+            .col-3.col-md-2.col-lg-1
+              button(class="delete-btn btn btn-danger btn-sm" type="button")
+                i(class="fa fa-minus" aria-hidden="true")
           .update-info(class="hidden")
             .row
-              .col-xs-12.col-sm-12.col-md-6.col-lg-4
+              .col-xs-12.col-sm-8.col-md-6.col-lg-4
                 input(class="form-control form-control-md update-name" type="text" placeholder="name" name="name")
             .row
-              .col-xs-12.col-sm-12.col-md-6.col-lg-4
+              .col-xs-12.col-sm-8.col-md-6.col-lg-4
                 textarea(class="update-quote" placeholder="  quote" name="quote")
             .row
               .col-6.col-sm-6.col-md-3.col-lg-2(class="no-pad-right")
