--- a/views/index.pug
+++ b/views/index.pug
@@ -40,7 +40,7 @@ block content
                 i(class="fa fa-pencil" aria-hidden="true")
             .col-3.col-md-2.col-lg-1
               button(class="delete-btn btn btn-danger btn-sm" type="button")
-                i(class="fa fa-minus" aria-hidden="true")
+                i(class="fa fa-trash" aria-hidden="true")
           .update-info(class="hidden")
             .row
               .col-xs-12.col-sm-8.col-md-6.col-lg-4
