--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -13,6 +13,14 @@ textarea
   max-height: 100px
   resize: none
   width: 100%
+  
+.add-section
+  display: block
+  margin: 0 auto
+  width: 400px
+  
+  #save-quote
+    width: 100%
 
 .quote
   //background-color: red
