--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -17,6 +17,7 @@ textarea
 .add-section
   display: block
   margin: 0 auto
+  max-width: 90%
   width: 400px
   
   #save-quote
@@ -71,3 +72,4 @@ body
 
 a
   color: #00B7FF
+
