--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,8 +29,37 @@ textarea {
 .no-pad-right {
   padding-right: 0; }
 
-.hidden {
-  display: none; }
+.bg-shadow {
+  background-color: #000;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  transition: opacity 600ms ease-in-out;
+  -moz-transition: opacity 600ms ease-in-out;
+  -webkit-transition: opacity 600ms ease-in-out; }
+  .bg-shadow.hidden {
+    visibility: hidden;
+    opacity: 0; }
+  .bg-shadow.fade-in {
+    visibility: visible;
+    opacity: 0.6; }
+
+.menu {
+  top: 5px;
+  position: relative;
+  transition: opacity 600ms ease-in-out;
+  -moz-transition: opacity 600ms ease-in-out;
+  -webkit-transition: opacity 600ms ease-in-out; }
+  .menu.hidden {
+    height: 0;
+    visibility: hidden;
+    opacity: 0; }
+  .menu.fade-in {
+    visibility: visible;
+    opacity: 1; }
 
 div[class^="col-"] button, div[class*=" col-"] button {
   width: 100%;
