--- a/views/index.pug
+++ b/views/index.pug
@@ -39,12 +39,12 @@ block content
             .col-3.col-md-2.col-lg-1
               button(class="delete-btn btn btn-danger btn-sm" type="button")
                 i(class="fa fa-trash" aria-hidden="true")
-          .update-info(class="hidden")
+          .update-info(class="menu hidden")
             .row
-              .col-xs-12.col-sm-8.col-md-6.col-lg-4
+              .col-xs-12.col-sm-12.col-md-6.col-lg-4
                 input(class="form-control form-control-md update-name" type="text" placeholder="name" name="name")
             .row
-              .col-xs-12.col-sm-8.col-md-6.col-lg-4
+              .col-xs-12.col-sm-12.col-md-6.col-lg-4
                 textarea(class="update-quote" placeholder="  quote" name="quote")
             .row
               .col-6.col-sm-6.col-md-3.col-lg-2(class="no-pad-right")
